<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_Dashboard" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_Attendance" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/menu_TimeTable" />
        <item
            android:id="@+id/nav_lessonPlan"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_LessonPlan" />

        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_aspect_ratio_black_24dp"
            android:title="@string/menu_Marks" />
        <item
            android:id="@+id/nav_academicCalendar"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_AcademicCalendar" />
        <item
            android:id="@+id/nav_studentGrievance"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/menu_StudentGrievance" />
        <item
            android:id="@+id/nav_creativeCell"
            android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/menu_CreativeCell" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_developer_mode_black_24dp"
            android:title="@string/menu_About" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_Logout" />
    </group>

</menu>
